t_comp_java/src/com/moonlight/cParser.java
// $ANTLR 3.5.2 c.g 2015-12-06 23:01:09
package com.moonlight;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class cParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADD", "ASSIGN", "BLOCK", "BOOL_TYPE", 
		"CALL_PARAMS", "DEC_INITED", "DEC_NOT_INITED", "DEC_PARAM", "DEC_PARAMS", 
		"DIV", "ELSE", "EQUALS", "FOR", "FOR_BODY", "FOR_COND", "FOR_INIT", "FOR_STEP", 
		"FUNC_BODY", "FUNC_CALL", "FUNC_DEC", "FUNC_ID", "FUNC_TYPE", "GE", "GT", 
		"ID", "IF", "IF_BODY", "IF_COND", "IF_ELSE_BODY", "INT_TYPE", "LADD", 
		"LE", "LMUL", "LOGIC", "LT", "ML_COMMENT", "MUL", "NEQUALS", "NUMBER", 
		"PROGRAM", "READ", "RETURN", "SL_COMMENT", "STRING", "STRING_TYPE", "SUB", 
		"VAR_DEC", "VAR_TYPE", "VOID_TYPE", "WRITE", "WS", "'('", "')'", "','", 
		"';'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int ADD=4;
	public static final int ASSIGN=5;
	public static final int BLOCK=6;
	public static final int BOOL_TYPE=7;
	public static final int CALL_PARAMS=8;
	public static final int DEC_INITED=9;
	public static final int DEC_NOT_INITED=10;
	public static final int DEC_PARAM=11;
	public static final int DEC_PARAMS=12;
	public static final int DIV=13;
	public static final int ELSE=14;
	public static final int EQUALS=15;
	public static final int FOR=16;
	public static final int FOR_BODY=17;
	public static final int FOR_COND=18;
	public static final int FOR_INIT=19;
	public static final int FOR_STEP=20;
	public static final int FUNC_BODY=21;
	public static final int FUNC_CALL=22;
	public static final int FUNC_DEC=23;
	public static final int FUNC_ID=24;
	public static final int FUNC_TYPE=25;
	public static final int GE=26;
	public static final int GT=27;
	public static final int ID=28;
	public static final int IF=29;
	public static final int IF_BODY=30;
	public static final int IF_COND=31;
	public static final int IF_ELSE_BODY=32;
	public static final int INT_TYPE=33;
	public static final int LADD=34;
	public static final int LE=35;
	public static final int LMUL=36;
	public static final int LOGIC=37;
	public static final int LT=38;
	public static final int ML_COMMENT=39;
	public static final int MUL=40;
	public static final int NEQUALS=41;
	public static final int NUMBER=42;
	public static final int PROGRAM=43;
	public static final int READ=44;
	public static final int RETURN=45;
	public static final int SL_COMMENT=46;
	public static final int STRING=47;
	public static final int STRING_TYPE=48;
	public static final int SUB=49;
	public static final int VAR_DEC=50;
	public static final int VAR_TYPE=51;
	public static final int VOID_TYPE=52;
	public static final int WRITE=53;
	public static final int WS=54;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public cParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public cParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return cParser.tokenNames; }
	@Override public String getGrammarFileName() { return "c.g"; }


	public static class primitive_value_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "primitive_value"
	// c.g:111:1: primitive_value : ( NUMBER | STRING | LOGIC | ID | func_call );
	public final cParser.primitive_value_return primitive_value() throws RecognitionException {
		cParser.primitive_value_return retval = new cParser.primitive_value_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token NUMBER1=null;
		Token STRING2=null;
		Token LOGIC3=null;
		Token ID4=null;
		ParserRuleReturnScope func_call5 =null;

		Object NUMBER1_tree=null;
		Object STRING2_tree=null;
		Object LOGIC3_tree=null;
		Object ID4_tree=null;

		try {
			// c.g:112:2: ( NUMBER | STRING | LOGIC | ID | func_call )
			int alt1=5;
			switch ( input.LA(1) ) {
			case NUMBER:
				{
				alt1=1;
				}
				break;
			case STRING:
				{
				alt1=2;
				}
				break;
			case LOGIC:
				{
				alt1=3;
				}
				break;
			case ID:
				{
				int LA1_4 = input.LA(2);
				if ( (LA1_4==55) ) {
					alt1=5;
				}
				else if ( (LA1_4==ADD||LA1_4==DIV||LA1_4==EQUALS||(LA1_4 >= GE && LA1_4 <= GT)||(LA1_4 >= LADD && LA1_4 <= LMUL)||LA1_4==LT||(LA1_4 >= MUL && LA1_4 <= NEQUALS)||LA1_4==SUB||(LA1_4 >= 56 && LA1_4 <= 58)) ) {
					alt1=4;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 1, 4, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}
			switch (alt1) {
				case 1 :
					// c.g:112:4: NUMBER
					{
					root_0 = (Object)adaptor.nil();


					NUMBER1=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_primitive_value588); 
					NUMBER1_tree = (Object)adaptor.create(NUMBER1);
					adaptor.addChild(root_0, NUMBER1_tree);

					}
					break;
				case 2 :
					// c.g:113:4: STRING
					{
					root_0 = (Object)adaptor.nil();


					STRING2=(Token)match(input,STRING,FOLLOW_STRING_in_primitive_value593); 
					STRING2_tree = (Object)adaptor.create(STRING2);
					adaptor.addChild(root_0, STRING2_tree);

					}
					break;
				case 3 :
					// c.g:114:4: LOGIC
					{
					root_0 = (Object)adaptor.nil();


					LOGIC3=(Token)match(input,LOGIC,FOLLOW_LOGIC_in_primitive_value598); 
					LOGIC3_tree = (Object)adaptor.create(LOGIC3);
					adaptor.addChild(root_0, LOGIC3_tree);

					}
					break;
				case 4 :
					// c.g:115:4: ID
					{
					root_0 = (Object)adaptor.nil();


					ID4=(Token)match(input,ID,FOLLOW_ID_in_primitive_value603); 
					ID4_tree = (Object)adaptor.create(ID4);
					adaptor.addChild(root_0, ID4_tree);

					}
					break;
				case 5 :
					// c.g:116:4: func_call
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_func_call_in_primitive_value608);
					func_call5=func_call();
					state._fsp--;

					adaptor.addChild(root_0, func_call5.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "primitive_value"


	public static class value_group_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "value_group"
	// c.g:119:1: value_group : ( '(' ! value_add ')' !| primitive_value );
	public final cParser.value_group_return value_group() throws RecognitionException {
		cParser.value_group_return retval = new cParser.value_group_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal6=null;
		Token char_literal8=null;
		ParserRuleReturnScope value_add7 =null;
		ParserRuleReturnScope primitive_value9 =null;

		Object char_literal6_tree=null;
		Object char_literal8_tree=null;

		try {
			// c.g:120:2: ( '(' ! value_add ')' !| primitive_value )
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==55) ) {
				alt2=1;
			}
			else if ( (LA2_0==ID||LA2_0==LOGIC||LA2_0==NUMBER||LA2_0==STRING) ) {
				alt2=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// c.g:120:4: '(' ! value_add ')' !
					{
					root_0 = (Object)adaptor.nil();


					char_literal6=(Token)match(input,55,FOLLOW_55_in_value_group619); 
					pushFollow(FOLLOW_value_add_in_value_group622);
					value_add7=value_add();
					state._fsp--;

					adaptor.addChild(root_0, value_add7.getTree());

					char_literal8=(Token)match(input,56,FOLLOW_56_in_value_group624); 
					}
					break;
				case 2 :
					// c.g:120:26: primitive_value
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_primitive_value_in_value_group629);
					primitive_value9=primitive_value();
					state._fsp--;

					adaptor.addChild(root_0, primitive_value9.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "value_group"


	public static class value_mult_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "value_mult"
	// c.g:123:1: value_mult : value_group ( ( MUL | DIV ) ^ value_group )* ;
	public final cParser.value_mult_return value_mult() throws RecognitionException {
		cParser.value_mult_return retval = new cParser.value_mult_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token set11=null;
		ParserRuleReturnScope value_group10 =null;
		ParserRuleReturnScope value_group12 =null;

		Object set11_tree=null;

		try {
			// c.g:124:2: ( value_group ( ( MUL | DIV ) ^ value_group )* )
			// c.g:124:4: value_group ( ( MUL | DIV ) ^ value_group )*
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_value_group_in_value_mult641);
			value_group10=value_group();
			state._fsp--;

			adaptor.addChild(root_0, value_group10.getTree());

			// c.g:124:16: ( ( MUL | DIV ) ^ value_group )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==DIV||LA3_0==MUL) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// c.g:124:18: ( MUL | DIV ) ^ value_group
					{
					set11=input.LT(1);
					set11=input.LT(1);
					if ( input.LA(1)==DIV||input.LA(1)==MUL ) {
						input.consume();
						root_0 = (Object)adaptor.becomeRoot((Object)adaptor.create(set11), root_0);
						state.errorRecovery=false;
					}
					else {
						MismatchedSetException mse = new MismatchedSetException(null,input);
						throw mse;
					}
					pushFollow(FOLLOW_value_group_in_value_mult656);
					value_group12=value_group();
					state._fsp--;

					adaptor.addChild(root_0, value_group12.getTree());

					}
					break;

				default :
					break loop3;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "value_mult"


	public static class value_add_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "value_add"
	// c.g:127:1: value_add : value_mult ( ( ADD | SUB ) ^ value_mult )* ;
	public final cParser.value_add_return value_add() throws RecognitionException {
		cParser.value_add_return retval = new cParser.value_add_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token set14=null;
		ParserRuleReturnScope value_mult13 =null;
		ParserRuleReturnScope value_mult15 =null;

		Object set14_tree=null;

		try {
			// c.g:128:2: ( value_mult ( ( ADD | SUB ) ^ value_mult )* )
			// c.g:128:4: value_mult ( ( ADD | SUB ) ^ value_mult )*
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_value_mult_in_value_add671);
			value_mult13=value_mult();
			state._fsp--;

			adaptor.addChild(root_0, value_mult13.getTree());

			// c.g:128:15: ( ( ADD | SUB ) ^ value_mult )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==ADD||LA4_0==SUB) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// c.g:128:17: ( ADD | SUB ) ^ value_mult
					{
					set14=input.LT(1);
					set14=input.LT(1);
					if ( input.LA(1)==ADD||input.LA(1)==SUB ) {
						input.consume();
						root_0 = (Object)adaptor.becomeRoot((Object)adaptor.create(set14), root_0);
						state.errorRecovery=false;
					}
					else {
						MismatchedSetException mse = new MismatchedSetException(null,input);
						throw mse;
					}
					pushFollow(FOLLOW_value_mult_in_value_add686);
					value_mult15=value_mult();
					state._fsp--;

					adaptor.addChild(root_0, value_mult15.getTree());

					}
					break;

				default :
					break loop4;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "value_add"


	public static class logic_group_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "logic_group"
	// c.g:132:1: logic_group : value_add ( ( GE | LE | NEQUALS | EQUALS | GT | LT ) ^ value_add )? ;
	public final cParser.logic_group_return logic_group() throws RecognitionException {
		cParser.logic_group_return retval = new cParser.logic_group_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token set17=null;
		ParserRuleReturnScope value_add16 =null;
		ParserRuleReturnScope value_add18 =null;

		Object set17_tree=null;

		try {
			// c.g:133:2: ( value_add ( ( GE | LE | NEQUALS | EQUALS | GT | LT ) ^ value_add )? )
			// c.g:133:4: value_add ( ( GE | LE | NEQUALS | EQUALS | GT | LT ) ^ value_add )?
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_value_add_in_logic_group702);
			value_add16=value_add();
			state._fsp--;

			adaptor.addChild(root_0, value_add16.getTree());

			// c.g:133:14: ( ( GE | LE | NEQUALS | EQUALS | GT | LT ) ^ value_add )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==EQUALS||(LA5_0 >= GE && LA5_0 <= GT)||LA5_0==LE||LA5_0==LT||LA5_0==NEQUALS) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// c.g:133:16: ( GE | LE | NEQUALS | EQUALS | GT | LT ) ^ value_add
					{
					set17=input.LT(1);
					set17=input.LT(1);
					if ( input.LA(1)==EQUALS||(input.LA(1) >= GE && input.LA(1) <= GT)||input.LA(1)==LE||input.LA(1)==LT||input.LA(1)==NEQUALS ) {
						input.consume();
						root_0 = (Object)adaptor.becomeRoot((Object)adaptor.create(set17), root_0);
						state.errorRecovery=false;
					}
					else {
						MismatchedSetException mse = new MismatchedSetException(null,input);
						throw mse;
					}
					pushFollow(FOLLOW_value_add_in_logic_group733);
					value_add18=value_add();
					state._fsp--;

					adaptor.addChild(root_0, value_add18.getTree());

					}
					break;

			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "logic_group"


	public static class logic_mult_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "logic_mult"
	// c.g:136:1: logic_mult : logic_group ( LMUL ^ logic_group )* ;
	public final cParser.logic_mult_return logic_mult() throws RecognitionException {
		cParser.logic_mult_return retval = new cParser.logic_mult_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token LMUL20=null;
		ParserRuleReturnScope logic_group19 =null;
		ParserRuleReturnScope logic_group21 =null;

		Object LMUL20_tree=null;

		try {
			// c.g:137:2: ( logic_group ( LMUL ^ logic_group )* )
			// c.g:137:4: logic_group ( LMUL ^ logic_group )*
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_logic_group_in_logic_mult748);
			logic_group19=logic_group();
			state._fsp--;

			adaptor.addChild(root_0, logic_group19.getTree());

			// c.g:137:16: ( LMUL ^ logic_group )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==LMUL) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// c.g:137:18: LMUL ^ logic_group
					{
					LMUL20=(Token)match(input,LMUL,FOLLOW_LMUL_in_logic_mult752); 
					LMUL20_tree = (Object)adaptor.create(LMUL20);
					root_0 = (Object)adaptor.becomeRoot(LMUL20_tree, root_0);

					pushFollow(FOLLOW_logic_group_in_logic_mult755);
					logic_group21=logic_group();
					state._fsp--;

					adaptor.addChild(root_0, logic_group21.getTree());

					}
					break;

				default :
					break loop6;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "logic_mult"


	public static class logic_add_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "logic_add"
	// c.g:140:1: logic_add : logic_mult ( LADD ^ logic_mult )* ;
	public final cParser.logic_add_return logic_add() throws RecognitionException {
		cParser.logic_add_return retval = new cParser.logic_add_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token LADD23=null;
		ParserRuleReturnScope logic_mult22 =null;
		ParserRuleReturnScope logic_mult24 =null;

		Object LADD23_tree=null;

		try {
			// c.g:141:2: ( logic_mult ( LADD ^ logic_mult )* )
			// c.g:141:4: logic_mult ( LADD ^ logic_mult )*
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_logic_mult_in_logic_add769);
			logic_mult22=logic_mult();
			state._fsp--;

			adaptor.addChild(root_0, logic_mult22.getTree());

			// c.g:141:15: ( LADD ^ logic_mult )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==LADD) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// c.g:141:17: LADD ^ logic_mult
					{
					LADD23=(Token)match(input,LADD,FOLLOW_LADD_in_logic_add773); 
					LADD23_tree = (Object)adaptor.create(LADD23);
					root_0 = (Object)adaptor.becomeRoot(LADD23_tree, root_0);

					pushFollow(FOLLOW_logic_mult_in_logic_add776);
					logic_mult24=logic_mult();
					state._fsp--;

					adaptor.addChild(root_0, logic_mult24.getTree());

					}
					break;

				default :
					break loop7;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "logic_add"


	public static class value_expr_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "value_expr"
	// c.g:144:1: value_expr : logic_add ;
	public final cParser.value_expr_return value_expr() throws RecognitionException {
		cParser.value_expr_return retval = new cParser.value_expr_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope logic_add25 =null;


		try {
			// c.g:145:2: ( logic_add )
			// c.g:145:4: logic_add
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_logic_add_in_value_expr789);
			logic_add25=logic_add();
			state._fsp--;

			adaptor.addChild(root_0, logic_add25.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "value_expr"


	public static class type_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "type"
	// c.g:150:1: type : ( INT_TYPE | BOOL_TYPE | STRING_TYPE | VOID_TYPE );
	public final cParser.type_return type() throws RecognitionException {
		cParser.type_return retval = new cParser.type_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token set26=null;

		Object set26_tree=null;

		try {
			// c.g:151:2: ( INT_TYPE | BOOL_TYPE | STRING_TYPE | VOID_TYPE )
			// c.g:
			{
			root_0 = (Object)adaptor.nil();


			set26=input.LT(1);
			if ( input.LA(1)==BOOL_TYPE||input.LA(1)==INT_TYPE||input.LA(1)==STRING_TYPE||input.LA(1)==VOID_TYPE ) {
				input.consume();
				adaptor.addChild(root_0, (Object)adaptor.create(set26));
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "type"


	public static class func_call_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "func_call"
	// c.g:154:1: func_call : ID '(' ( value_expr ( ',' value_expr )* )? ')' -> ^( FUNC_CALL ^( FUNC_ID ID ) ^( CALL_PARAMS ( value_expr )* ) ) ;
	public final cParser.func_call_return func_call() throws RecognitionException {
		cParser.func_call_return retval = new cParser.func_call_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token ID27=null;
		Token char_literal28=null;
		Token char_literal30=null;
		Token char_literal32=null;
		ParserRuleReturnScope value_expr29 =null;
		ParserRuleReturnScope value_expr31 =null;

		Object ID27_tree=null;
		Object char_literal28_tree=null;
		Object char_literal30_tree=null;
		Object char_literal32_tree=null;
		RewriteRuleTokenStream stream_55=new RewriteRuleTokenStream(adaptor,"token 55");
		RewriteRuleTokenStream stream_56=new RewriteRuleTokenStream(adaptor,"token 56");
		RewriteRuleTokenStream stream_57=new RewriteRuleTokenStream(adaptor,"token 57");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleSubtreeStream stream_value_expr=new RewriteRuleSubtreeStream(adaptor,"rule value_expr");

		try {
			// c.g:155:2: ( ID '(' ( value_expr ( ',' value_expr )* )? ')' -> ^( FUNC_CALL ^( FUNC_ID ID ) ^( CALL_PARAMS ( value_expr )* ) ) )
			// c.g:155:4: ID '(' ( value_expr ( ',' value_expr )* )? ')'
			{
			ID27=(Token)match(input,ID,FOLLOW_ID_in_func_call827);  
			stream_ID.add(ID27);

			char_literal28=(Token)match(input,55,FOLLOW_55_in_func_call829);  
			stream_55.add(char_literal28);

			// c.g:155:11: ( value_expr ( ',' value_expr )* )?
			int alt9=2;
			int LA9_0 = input.LA(1);
			if ( (LA9_0==ID||LA9_0==LOGIC||LA9_0==NUMBER||LA9_0==STRING||LA9_0==55) ) {
				alt9=1;
			}
			switch (alt9) {
				case 1 :
					// c.g:155:13: value_expr ( ',' value_expr )*
					{
					pushFollow(FOLLOW_value_expr_in_func_call833);
					value_expr29=value_expr();
					state._fsp--;

					stream_value_expr.add(value_expr29.getTree());
					// c.g:155:24: ( ',' value_expr )*
					loop8:
					while (true) {
						int alt8=2;
						int LA8_0 = input.LA(1);
						if ( (LA8_0==57) ) {
							alt8=1;
						}

						switch (alt8) {
						case 1 :
							// c.g:155:26: ',' value_expr
							{
							char_literal30=(Token)match(input,57,FOLLOW_57_in_func_call837);  
							stream_57.add(char_literal30);

							pushFollow(FOLLOW_value_expr_in_func_call839);
							value_expr31=value_expr();
							state._fsp--;

							stream_value_expr.add(value_expr31.getTree());
							}
							break;

						default :
							break loop8;
						}
					}

					}
					break;

			}

			char_literal32=(Token)match(input,56,FOLLOW_56_in_func_call846);  
			stream_56.add(char_literal32);
